--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-	<title>Angular JS Samples</title>
-</head>
-<body ng-controller="HomeController">
-<div>
-{{name}}
-</div>
+<title>Angular JS Samples</title>
 <script src="references/angular/angular.min.js"></script>
 <script src="app.js"></script>
 <script src="Controllers/HomeController.js"></script>
+<!-- <script src="Controllers/IndiaController.js"></script> -->
+</head>
+<body>
+<div ng-controller="HomeController" >
+   {{name}}<br><br><br>
+   <table border="1px">
+    	<tr><th>name</th><th>age</th><th>gender</th></tr>
+    	<tr data-ng-repeat="x in candidate">
+    		<td>{{x.name}}</td><td>{{x.age}}</td><td>{{x.gender}}</td>
+    	</tr>
+    </table>
+</div>
+<!-- <div ng-controller="ConCtrl">
+    <select ng-model="matchedindia" ng-options="values as values.name for values in AllContries"></select>
+</div> -->
 </body>
 </html>
